<resources>
    <string name="app_name">VolunTutor</string>
    <string name="upcoming_sessions_text">Upcoming Sessions</string>
    <string name="sample_upcoming_text">UPCOMING SESSION</string>
    <string name="pending_sessions_text">Pending Sessions</string>
    <string name="sample_pending_text">PENDING SESSION</string>
    <string name="sample_search_text">Search for different subjects</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings_preference">Settings</string>
    <string name="title_make_user">Make user</string>
    <string name="shared_pref_name">Startup info</string>
    <string name="path">Path name</string>
    <string name="inFireBase">inFireBase</string>
    <string name="isTutor">isTutor</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string-array name="subjects">
        <item>"Art"</item><item>Biology</item><item>"Chemistry"</item><item>"Computer Science"</item>
        <item>"Earth Science"</item><item>"English"</item> <item>"French"</item><item>"History"</item>
        <item>"Math"</item><item>"Music"</item><item>"Physics"</item><item>"Spanish"</item>
    </string-array>

    <string-array name="hours">
        <item>"0"</item><item>"1"</item><item>"2"</item><item>"3"</item><item>"4"</item>
        <item>"5"</item><item>"6"</item><item>"7"</item><item>"8"</item><item>"9"</item>
        <item>"10"</item><item>"11"</item><item>"12"</item><item>"13"</item><item>"14"</item>
        <item>"15"</item><item>"16"</item><item>"17"</item><item>"18"</item><item>"19"</item>
        <item>"20"</item><item>"21"</item><item>"22"</item><item>"23"</item>
    </string-array>

    <string-array name="minutes">
        <item>"00"</item><item>"01"</item><item>"02"</item><item>"03"</item><item>"04"</item>
        <item>"05"</item><item>"06"</item><item>"07"</item><item>"08"</item><item>"09"</item>
        <item>"10"</item><item>"11"</item><item>"12"</item><item>"13"</item><item>"14"</item>
        <item>"15"</item><item>"16"</item><item>"17"</item><item>"18"</item><item>"19"</item>
        <item>"20"</item><item>"21"</item><item>"22"</item><item>"23"</item><item>"24"</item>
        <item>"25"</item><item>"26"</item><item>"27"</item><item>"28"</item>
        <item>"29"</item><item>"30"</item><item>"31"</item><item>"32"</item><item>"33"</item>
        <item>"34"</item><item>"35"</item><item>"36"</item><item>"37"</item><item>"38"</item>
        <item>"39"</item><item>"40"</item><item>"41"</item><item>"42"</item><item>"43"</item>
        <item>"44"</item><item>"45"</item><item>"46"</item><item>"47"</item><item>48</item><item>"49"</item>
        <item>"50"</item><item>"51"</item><item>"52"</item><item>"53"</item><item>"54"</item>
        <item>"55"</item><item>"56"</item><item>"57"</item><item>"58"</item><item>59</item>

    </string-array>

    <string-array name="days">
        <item>"Monday"</item>
        <item>"Tuesday"</item>
        <item>"Wednesday"</item>
        <item>"Thursday"</item>
        <item>"Friday"</item>
        <item>"Saturday"</item>
        <item>"Sunday"</item>
    </string-array>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hours_sampletext">Hours</string>
    <string name="hours_hint">Enter your hours here.</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_search_text">Search</string>
    <string name="change_name_str">Change name:</string>
    <string name="Name_descr">Name:</string>
    <string name="auto_name">John Doe</string>
    <string name="ok">OK</string>
    <string name="change_school_str">Change school:</string>
    <string name="add_slot_str">Add slot:</string>
    <string name="remove_slot_str">Remove slot:</string>
    <string name="add_subj_label">Add subject:</string>
    <string name="rem_subj_str">Remove subject:</string>
    <string name="welcome">Welcome!</string>
    <string name="login_directions">Please put information into all the fields below and then click OK at the bottom.</string>
    <string name="School_descr">School:</string>
    <string name="Session_descr">Session:</string>
    <string name="Session_descr2">Enter a day when you are available to tutor below:</string>
    <string name="Start_time_hint">Enter start time</string>
    <string name="End_time_hint" />
    <string name="End_time_hint2">Enter end time</string>
    <string name="Subjects_descr">Enter the subjects you want to tutor in, separated by commas</string>
    <string name="add_session_str">Add session</string>
    <string name="updateMyHours">Update</string>
    <string name="Student_hours_error">Oops! You don\'t have access to this page since you\'re a student.</string>
    <string name="browse">Browse to find your new tutor here!</string>
    <string name="Slot_descr">Please add in one day of the week and time you are available</string>
    <string name="button">Button</string>
    <string name="homefragment_title">Sessions</string>
    <string name="sample_hours">00</string>
    <string name="sample_date">Monday, May 4</string>
    <string name="sample_time">12:00-2:00</string>
    <string name="sample_highschool">_____ High School</string>
    <string name="tutor_name">TextView</string>
    <string name="instruct_text">Click to see more</string>
    <string name="TextView">TextView</string>
    <string name="welcome_text">Welcome to VolunTutor!</string>
    <string name="psessions_name">TextView</string>
    <string name="psessions_date">TextView</string>
    <string name="psessions_time">TextView</string>
    <string name="verify">Verify?</string>
    <string name="verify_button">Yes</string>
    <string name="no_button">No</string>
    <string name="length_in_minutes">Length (in minutes):</string>
    <string name="location">Location:</string>
    <string name="go">go!</string>
    <string name="slot_day">Monday</string>
    <string name="slot_time">10:00-12:00</string>
    <string name="day_of_session">Day of session:</string>
    <string name="start_time">Start time:</string>
    <string name="select">I want to be (select one):</string>
    <string name="end_time">End time:</string>
    <string name="tutor_option">A tutor</string>
    <string name="student_option">A student</string>
    <string name="subjects_label">Enter one subject you can tutor in. You will be able to add more later, using the Settings tab.</string>
    <string name="make_user_obj">OK</string>
    <string name="proceed_text">Proceed using the navigation bar below</string>
    <string name="greeting_text">Hello</string>
    <string name="setSchool">Hi</string>
    <string name="setSubs">Subjects:</string>
    <string name="change_school_student">_____ High School</string>
    <string name="startDescr">Start time:</string>
    <string name="end_descr">End time:</string>
    <string name="back_button">Return to Browse</string>
    <string name="sessions_cancel">Cancel</string>
    <string name="available_1">Please add in one day of the week and time (on a 24-hour scale) when you are available</string>
</resources>
