<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home_text" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search_text" />

    <item
        android:id="@+id/nav_hours"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/hours_sampletext" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_make_user"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/title_make_user"/>


</menu>