<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/psessions_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e0f2f1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/psessions_name"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:text="@string/psessions_name" />

            <TextView
                android:id="@+id/psessions_date"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:text="@string/psessions_date" />

            <TextView
                android:id="@+id/psessions_time"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                android:text="@string/psessions_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/verify_button" />

        <Button
            android:id="@+id/no_verify_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

    <!-- RecyclerView code and functionality adapted from https://youtu.be/06UFnvHbr10-->
    <!-- Bottom Navigation bar code and functionality adapted from https://youtu.be/tPV8xA7m-iw-->