<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/title_settings"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_name_student_label"
        android:layout_width="387dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="658dp"
        android:text="@string/change_name_str"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/change_name_student_field"
        android:layout_width="387dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="612dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/auto_name"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_name_student_label"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/name_change_student_confirm"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="568dp"
        android:text="@string/ok"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_name_student_field"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/change_school_student_label"
        android:layout_width="387dp"
        android:layout_height="25dp"
        android:layout_marginBottom="520dp"
        android:text="@string/change_school_str"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_change_student_confirm"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/change_school_student_field"
        android:layout_width="387dp"
        android:layout_height="40dp"
        android:layout_marginBottom="494dp"
        android:ems="10"
        android:hint="@string/change_school_student"
        android:inputType="text|textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_school_student_label"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/school_change_student_confirm"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginBottom="452dp"
        android:text="@string/ok"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_school_student_field"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>

    <!-- RecyclerView code and functionality adapted from https://youtu.be/06UFnvHbr10-->
    <!-- Bottom Navigation bar code and functionality adapted from https://youtu.be/tPV8xA7m-iw-->